--- a/plugins/inputs/http/sample.conf
+++ b/plugins/inputs/http/sample.conf
@@ -23,6 +23,7 @@
   ## Use either the token itself or the token file if you need a token.
   # token = "eyJhbGc...Qssw5c"
   # token_file = "/path/to/file"
+  # remove_bearer_token_prefix = false
 
   ## Optional HTTP Basic Auth Credentials
   # username = "username"
