Updated docker file name

--- a/.github/workflows/build-release-buddy.yml
+++ b/.github/workflows/build-release-buddy.yml
@@ -31,4 +31,4 @@ jobs:
       with:
         push: false
         tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/master:${{ github.sha }}
-        file: scripts/bullseye
+        file: scripts/bullseye.docker
