--- a/.github/workflows/build-release-buddy.yml
+++ b/.github/workflows/build-release-buddy.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   docker_build_push_acr:
     name: 'Docker Build and Push to ACR'
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     environment: production
   
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
