Added docker buildx to workflow

--- a/.github/workflows/build-release-buddy.yml
+++ b/.github/workflows/build-release-buddy.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   docker_build_push_acr:
     name: 'Docker Build and Push to ACR'
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment: production
   
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
@@ -28,7 +28,11 @@ jobs:
 
     - name: Create Datetime Tag
       run: echo "NOW=$(date +'%Y%m%d%H%M')" >> $GITHUB_ENV
- 
+    
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build the telegraf image and push it to ACR
       uses: docker/build-push-action@v5
       with:
