--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -35,10 +35,10 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: Build and Export Telegraf
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       with:
         push: false
-        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/telegraf:master-${{ env.NOW }}
+        tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/telegraf
         file: scripts/bullseye.docker
         outputs: type=docker,dest=/tmp/telegraf-image.tar
 
@@ -66,6 +66,7 @@ jobs:
       - name: Load telegraf image
         run: |
           docker load --input /tmp/telegraf-image.tar
+          docker image tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/telegraf ${{ secrets.REGISTRY_LOGIN_SERVER }}/telegraf:master-${{ needs.docker_build.outputs.dt-now }}
           docker image ls -a
 
       - name: 'ACR Login'
@@ -97,6 +98,7 @@ jobs:
       - name: Load telegraf image
         run: |
           docker load --input /tmp/telegraf-image.tar
+          docker image tag ${{ secrets.REGISTRY_LOGIN_SERVER }}/telegraf ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/telegraf:master-${{ needs.docker_build.outputs.dt-now }}
           docker image ls -a
 
       - name: 'ACR Login'
@@ -106,9 +108,6 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME_PROD }}
           password: ${{ secrets.REGISTRY_PASSWORD_PROD }}
 
-      - name: Push to Prod ACR
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/telegraf:master-${{ needs.docker_build.outputs.dt-now }}
-          file: scripts/bullseye.docker
+      - name: Push Dev
+        run: |
+          docker push ${{ secrets.REGISTRY_LOGIN_SERVER_PROD }}/telegraf:master-${{ needs.docker_build.outputs.dt-now }}
