Using MCR registry for golang base image

--- a/.pipelines/SDLT-Telegraf-Build-Buddy.yml
+++ b/.pipelines/SDLT-Telegraf-Build-Buddy.yml
@@ -83,7 +83,7 @@ extends:
             displayName: "🔒 Building Telegraf Docker Image"
             inputs:
               repositoryName: 'telegraf'
-              dockerFileRelPath: scripts/bullseye.docker
+              dockerFileRelPath: scripts/mariner.docker
               dockerFileContextPath: ./
               saveImageToPath: 'telegraf-image.tar'
               enable_isolated_acr_push: true
